tests/reject/sum_annot_place_payload.ty
# A Some/Ok/Err payload stored into a place (a struct field here; a map value m[k]=...
# is the same path) must type-check against the place's type. The field is Option(string)
# but Some(42) is assigned -- int in a string slot. Both compilers must reject. (Locks
# check_sum_pos at the place-assignment position.)
struct B:
    o: Option(string)

fn main():
    b : B = B(None)
    b.o = Some(42)
    println("unreachable")
